# PythonC19

FlightAlert/: .env.example  .gitignore  Dockerfile  README.md  SOLID.md  celerybeat-schedule.db  docker-compose.yml  main.py  manage.py  pyproject.toml  pytest.ini
FlightAlert/apps/flights/: admin.py  apps.py  checkers.py  models.py  notifiers.py  repositories.py  serializers.py  services.py  tasks.py  urls.py  views.py
FlightAlert/apps/flights/migrations/: 0001_initial.py  0002_initial.py
FlightAlert/apps/flights/tests/: factories.py  test_models.py  test_repositories.py  test_services.py
FlightAlert/apps/users/: admin.py  models.py  repositories.py  serializers.py  services.py  urls.py  views.py
FlightAlert/apps/users/migrations/: 0001_initial.py
FlightAlert/apps/users/tests/: factories.py  test_models.py  test_repositories.py  test_services.py
FlightAlert/flightalert/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
day1/: my_python_file.py
day2/: main.py
day2/utils/: file_util.py
day3/: car.py
ledger_app/: .coverage  .dockerignore  .env.example  .gitignore  DOCKER_SETUP.md  Dockerfile  celerybeat-schedule  docker-compose.yml  entrypoint.sh  env.txt  manage.py  requirements.txt  test.js  test_enum.py  user.txt
ledger_app/karate-tests/: pom.xml
ledger_app/ledger_project/: asgi.py  celery.py  settings.py  wsgi.py
ledger_app/ledger_project/settings/: __init__.py  base.py  local.py  (+1 more)
ledger_app/users/: cron.py  demo.py  jwt_util.py  loop.py  models.py  my_test.py  permissions.py  serializers.py  tests.py  urls.py  views.py
(+6 files in other folders)
