[project]
name = "flightalert"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2.14",
    "django-environ>=0.13.0",
    "djangorestframework>=3.17.1",
    "factory-boy>=3.3.3",
    "faker>=40.18.0",
    "psycopg2-binary>=2.9.12",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "uvicorn[standard]>=0.47.0",
    "brevo-python>=4.0.10",
    "celery[redis]>=5.4.0",
    "djangorestframework-simplejwt>=5.4.0",
]
